# SDRPlusPlus_SDDC_Source_Plugin

./: README.md
binary_plugins_Ubuntu24.04/: README.MD
evp_detector/: CMakeLists.txt  Readme.MD
evp_detector/src/: main.cpp
fxaudio_sink/: CMakeLists.txt  README.MD
fxaudio_sink/src/: main.cpp
libsddc_shared/: libsddc.pc.in
nraudio_sink/: CMakeLists.txt  README.MD
nraudio_sink/src/: main.cpp
rnnoise_plugin_Ubuntu_x64_binary/: README.MD  install-rnnoise.sh  sdrpp-rnnoise-plugin.deb
sdaudio_sink/: CMakeLists.txt  README.MD
sdaudio_sink/src/: main.cpp
sddc_shared_lib_sdrpp/: README.MD
sddc_shared_lib_sdrpp/libsddc_shared/: CMakeLists.txt
sddc_shared_lib_sdrpp/sddc2_source/: CMakeLists.txt
sddc_shared_lib_sdrpp/sddc2_source/src/: main.cpp
sddc_source/src/: main.cpp
